Replace an assertion in the dwarf code with a warning message.

PR 30327
  * dwarf.c (read_and_display_attr_value): Warn if the number of views is greater than the number of locations.